--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/TOUDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/TOUDataTemplate.xaml
@@ -9,7 +9,16 @@
              xmlns:types="clr-namespace:SCME.Types;assembly=SCME.Types"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=tou:TestParameters}"
              d:DesignWidth="800">
-        <Grid.ColumnDefinitions>
+    <Grid.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
+                
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Grid.Resources>
+    <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
             <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
             <ColumnDefinition Width="30" />
