--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -39,24 +39,26 @@
             <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
             <customControl:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding ParameterClamp}" />
 
-            <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.ParameterType}" 
+        <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Height_Prof}"  />
+        <customControl:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding Height}"  />
+
+        <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.Temp}" />
+        <customControl:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding Temperature}"/>
+                
+        <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.ParameterType}" 
                    Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
-            <ComboBox Grid.Column="1" Grid.Row="1" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"
+            <ComboBox Grid.Column="1" Grid.Row="2" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"
                       ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" 
                       DisplayMemberPath="Name" SelectedValuePath="TestParametersType" 
                       SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}">
             </ComboBox>
-            <Button Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
+            <Button Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
                     Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
             
-            <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.Height_Prof}"  />
-            <customControl:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding Height}"  />
             
-            <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.Temp}" />
-            <customControl:NumericUpDown Grid.Column="4" Grid.Row="2" Value="{Binding Temperature}"/>
             
-            <CheckBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" 
-                      Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"/>
+            <!--<CheckBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" 
+                      Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"/>-->
             
         </Grid>
 </UserControl>
