--- a/SCME.WpfControlLibrary/Styles/CheckBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/CheckBox.xaml
@@ -96,6 +96,9 @@
                         <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type profilesPageComponents:AddTestParameterUserControl}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
                             <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type Border}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
+                            <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
+                        </DataTrigger>
                         <!-- <Trigger Property="IsMouseOver" Value="True"> -->
                         <!--     <Setter TargetName="normal" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(controls:ControlsHelper.MouseOverBorderBrush)}" /> -->
                         <!-- </Trigger> -->
