--- a/SCME.WpfControlLibrary/Styles/DataTemplateForTestParameters.xaml
+++ b/SCME.WpfControlLibrary/Styles/DataTemplateForTestParameters.xaml
@@ -3,7 +3,11 @@
     <Style TargetType="CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
         <Setter Property="FlowDirection" Value="RightToLeft"></Setter>
     </Style>
-         
+
+    <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
+        <Setter Property="Margin" Value="0,5,0,5"></Setter>
+    </Style>
+    
     <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
         <Setter Property="Padding" Value="0,5,5,5"></Setter>
     </Style>
