--- a/SCME.UI/CustomControl/ListViewResults.xaml
+++ b/SCME.UI/CustomControl/ListViewResults.xaml
@@ -658,7 +658,8 @@
     <ListView.ItemContainerStyle>
         <Style TargetType="ListViewItem">
             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            
+
+            <Setter Property="Focusable" Value="false"/>
         </Style>
     </ListView.ItemContainerStyle>
     <ListView.Template>
