--- a/SCME.WpfControlLibrary/Styles/Button.xaml
+++ b/SCME.WpfControlLibrary/Styles/Button.xaml
@@ -6,9 +6,10 @@
 
     
     <Style x:Key="ButtonWithIcon" TargetType="Button">
+        <Setter Property="Padding" Value="0" />
         <Setter Property="Background" Value="{StaticResource ButtonWithIconBrush}" />
-        <Setter Property="Height" Value="{DynamicResource SCME.SizeButtonWithIcon}" />
-        <Setter Property="Width" Value="{DynamicResource SCME.SizeButtonWithIcon}" />
+        <Setter Property="Height" Value="36" />
+        <Setter Property="Width" Value="36" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
