--- a/SCME.WpfControlLibrary/Styles/CheckBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/CheckBox.xaml
@@ -8,6 +8,8 @@
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Sizes.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml" />
             <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Icons.xaml" />
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Path.xaml" />
     </ResourceDictionary.MergedDictionaries>
     
     
@@ -15,11 +17,9 @@
     <!--  ********************************** CheckBoxStyle **********************************  -->
     <!--  adapted from http://brianlagunas.com/free-metro-light-and-dark-themes-for-wpf-and-silverlight-microsoft-controls/  -->
     <Style TargetType="CheckBox" >
-        <Setter Property="Background" Value="{DynamicResource WhiteBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource CheckBoxBrush}" />
-        <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="controls:ControlsHelper.FocusBorderBrush" Value="{DynamicResource HighlightBrush}" />
-        <Setter Property="controls:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource CheckBoxMouseOverBrush}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="White" />
+        <Setter Property="BorderThickness" Value="2" />
         <Setter Property="FontFamily" Value="{DynamicResource ContentFontFamily}" />
         <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
         <Setter Property="Foreground" Value="{DynamicResource LabelTextBrush}" />
@@ -36,25 +36,15 @@
                         </Grid.ColumnDefinitions>
                         <Grid x:Name="PART_CHECKBOX" Grid.Column="0">
                             <!--<Rectangle Fill="{DynamicResource TransparentWhiteBrush}" />-->
-                            <Border x:Name="normal"
-                                    Width="{DynamicResource SCME.RepeatButtonUpDownSize}"
-                                    Height="{DynamicResource SCME.RepeatButtonUpDownSize}"
+                            <Border x:Name="normal" 
+                                    Width="36"
+                                    Height="36"
                                     Background="{TemplateBinding Background}"
                                     BorderBrush="{TemplateBinding BorderBrush}"
                                     BorderThickness="{TemplateBinding BorderThickness}"
                                     SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                            <Path x:Name="checkBox" FlowDirection="LeftToRight"
-                                  Width="{DynamicResource SCME.RepeatButtonUpDownSize}"
-                                  Height="{DynamicResource SCME.RepeatButtonUpDownSize}"
-                                  Data="M 1145.607177734375,430 C1145.607177734375,430 1141.449951171875,435.0772705078125 1141.449951171875,435.0772705078125 1141.449951171875,435.0772705078125 1139.232177734375,433.0999755859375 1139.232177734375,433.0999755859375 1139.232177734375,433.0999755859375 1138,434.5538330078125 1138,434.5538330078125 1138,434.5538330078125 1141.482177734375,438 1141.482177734375,438 1141.482177734375,438 1141.96875,437.9375 1141.96875,437.9375 1141.96875,437.9375 1147,431.34619140625 1147,431.34619140625 1147,431.34619140625 1145.607177734375,430 1145.607177734375,430 z"
-                                  Fill="Blue"
-                                  Opacity="0"
-                                  Stretch="Uniform"
-                                  UseLayoutRounding="False" />
-                            <!--Rectangle x:Name="IndeterminateCheck"
-                                       
-                                       Fill="{DynamicResource GrayBrush3}"
-                                       Opacity="0" />-->
+                            <Path x:Name="checkBox" FlowDirection="LeftToRight" Margin="5" Data="{StaticResource CheckBoxIcon}" Style="{StaticResource PathIcon}" Fill="Blue" />
+
                         </Grid>
                         <ContentPresenter x:Name="contentPresenter"
                                           Grid.Column="1"
@@ -90,6 +80,9 @@
                         </VisualStateManager.VisualStateGroups>
                     </Grid>
                     <ControlTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Path=IsChecked, RelativeSource={RelativeSource Self}}" Value="False">
+                            <Setter TargetName="checkBox" Property="Visibility" Value="Collapsed"></Setter>
+                        </DataTrigger>
                         <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type ListView}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
                             <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
                         </DataTrigger>
@@ -106,11 +99,11 @@
                             <Setter TargetName="normal" Property="BorderBrush" Value="{DynamicResource HighlightBrush}" />
                         </Trigger>
                         <Trigger Property="IsFocused" Value="True">
-                            <Setter TargetName="normal" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(controls:ControlsHelper.FocusBorderBrush)}" />
+                            
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter Property="Background" Value="Transparent"/>
-                            <Setter TargetName="normal" Property="Visibility" Value="Hidden"/>
+                            <!--<Setter Property="Background" Value="Transparent"/>-->
+                            <!--<Setter TargetName="normal" Property="Visibility" Value="Hidden"/>-->
                         </Trigger>
                         <Trigger Property="FlowDirection" Value="RightToLeft">
                             <Setter TargetName="contentPresenter" Property="HorizontalAlignment" Value="Right"></Setter>
@@ -121,6 +114,7 @@
             </Setter.Value>
         </Setter>
         <Setter Property="VerticalContentAlignment" Value="Center" />
+        
     </Style>
     
 </ResourceDictionary>
