--- a/SCME.WpfControlLibrary/Styles/DataTemplateForTestParameters.xaml
+++ b/SCME.WpfControlLibrary/Styles/DataTemplateForTestParameters.xaml
@@ -1,14 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
-        <Setter Property="FlowDirection" Value="RightToLeft"></Setter>
-    </Style>
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls">
+    
 
     <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
-        <Setter Property="Margin" Value="0,5,0,5"></Setter>
+        <Setter Property="Margin" Value="0,5"></Setter>
     </Style>
-    
-    <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
-        <Setter Property="Padding" Value="0,5,5,5"></Setter>
+
+    <Style TargetType="CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
+        <Setter Property="FlowDirection" Value="RightToLeft"></Setter>
+        <Setter Property="Margin" Value="0,5"></Setter>
+    </Style>
+
+    <Style TargetType="customControls:NumericUpDown" BasedOn="{StaticResource {x:Type customControls:NumericUpDown}}"> 
+        <Setter Property="Margin" Value="0,5"></Setter>
     </Style>
 </ResourceDictionary>
