--- a/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
@@ -44,20 +44,20 @@
                                         Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
                                         Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=MoveUp}"
                                         CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}">
-                                    <iconPacks:PackIconMaterial Kind="ArrowUp" />
+                                    <Path Data="{StaticResource ArrowUp}" Style="{StaticResource PathIcon}"/>
                                 </Button>
-                                <Button Style="{StaticResource ButtonWithIcon}" Margin="10,0,10,0"
+                                <Button Style="{StaticResource ButtonWithIcon}" Margin="5,0"
                                         Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
                                         Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=MoveDown}"
                                         CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}">
-                                    <iconPacks:PackIconMaterial Kind="ArrowDown" />
+                                    <Path Data="{StaticResource ArrowDown}" Style="{StaticResource PathIcon}"/>
                                 </Button>
 
                                 <Button Style="{StaticResource ButtonWithIcon}" HorizontalAlignment="Right"
                                         Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
                                         Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=DeleteRelayCommand}"
                                         CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=DataContext}">
-                                    <iconPacks:PackIconMaterial Kind="Delete" />
+                                    <Path Data="{StaticResource Delete}" Style="{StaticResource PathIcon}"/>
                                 </Button>
                             </StackPanel>
 
