--- a/SCME.WpfControlLibrary/Styles/NumericUpDown.xaml
+++ b/SCME.WpfControlLibrary/Styles/NumericUpDown.xaml
@@ -2,14 +2,16 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:myControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
                     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-                    xmlns:converters="clr-namespace:MahApps.Metro.Converters;assembly=MahApps.Metro">
+                    >
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Icons.xaml" />
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Path.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <converters:ThicknessBindingConverter x:Key="ThicknessBindingConverter" />
+    
 
     <Style TargetType="{x:Type myControls:NumericUpDown}">
         <Setter Property="Template">
@@ -21,25 +23,19 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <Label Grid.Column="0" x:Name="LabelValue" Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsEnabled, Converter={StaticResource B2VI}}"  ContentStringFormat="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=StringFormat}" Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Value}" />
-                        <TextBox Grid.Column="0" x:Name="TextBoxValue" Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsEnabled, Converter={StaticResource B2V}}"  Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Value}" />
-                        <RepeatButton Grid.Column="1" x:Name="ButtonUp" Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Up}" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}">
-                            
-                            <Path Data="F1 M 35,19L 41,19L 41,35L 57,35L 57,41L 41,41L 41,57L 35,57L 35,41L 19,41L 19,35L 35,35L 35,19 Z " Fill="Black" Stretch="Fill" />
+                        <Label Grid.Column="0" x:Name="LabelValue" HorizontalAlignment="Right" Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsEnabled, Converter={StaticResource B2VI}}"  ContentStringFormat="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=StringFormat}" Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Value}" />
+                        <TextBox Grid.Column="0" x:Name="TextBoxValue" TextAlignment="Right" Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsEnabled, Converter={StaticResource B2V}}"  Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Value}" />
+                        <RepeatButton Grid.Column="1" x:Name="ButtonUp" Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Up}" Width="36" Height="36" Margin="5,0">
+                            <Path Data="{StaticResource Plus}" Style="{StaticResource PathIcon}" />
                         </RepeatButton>
-                        <RepeatButton Grid.Column="2" x:Name="ButtonDown" Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Down}" >
-                            <Path Data="F1 M 19,38L 57,38L 57,44L 19,44L 19,38 Z " Fill="Black" Stretch="Fill" />
+                        <RepeatButton Grid.Column="2" x:Name="ButtonDown" Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Down}" Width="36" Height="36">
+                            <Path Data="{StaticResource Minus}" Style="{StaticResource PathIcon}" />
                         </RepeatButton>
                     </Grid>          
                     <ControlTemplate.Triggers>
-
-                        <!--<Trigger Property="IsEnabled" Value="True">
-                            <Setter TargetName="ButtonUp" Property="Background" Value="Transparent"></Setter>
-                            <Setter TargetName="ButtonDown" Property="Background" Value="Transparent"></Setter>
-                        </Trigger>-->
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter TargetName="ButtonUp" Property="Visibility" Value="Hidden"></Setter>
-                            <Setter TargetName="ButtonDown" Property="Visibility" Value="Hidden"></Setter>
+                            <Setter TargetName="ButtonUp" Property="Visibility" Value="Collapsed"></Setter>
+                            <Setter TargetName="ButtonDown" Property="Visibility" Value="Collapsed"></Setter>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
