US 03.15 UI Fix rc1

--- a/SCME.UI/PagesTech/PasswordPage.xaml
+++ b/SCME.UI/PagesTech/PasswordPage.xaml
@@ -41,8 +41,9 @@
                          Text="" Focusable="True" Padding="8"/>
 
             <Label x:Name="lblIncorrect" Grid.Column="1" Grid.Row="2" HorizontalContentAlignment="Center"
-                   FontSize="18" HorizontalAlignment="Center"
-                   Content="" Foreground="{StaticResource xOrange1}"  Padding="5"/>
+                   FontSize="18" HorizontalAlignment="Center" Visibility="Hidden"
+                   Content="{x:Static res:Resources.PasswordIncorrect}"
+                    Foreground="{StaticResource xOrange1}"  Padding="5"/>
 
         </Grid>
 
