--- a/SCME.ProfileBuilder/Pages/SelectEditModePage.xaml
+++ b/SCME.ProfileBuilder/Pages/SelectEditModePage.xaml
@@ -14,7 +14,18 @@
       DataContext="{Binding RelativeSource={RelativeSource Self}, Path=Vm}"
 	Title="ConnectPage">
     <Page.Resources>
-        <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
+                <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Center"/>
+                <Setter Property="TextAlignment" Value="Center"/>
+            </Style>
+        </ResourceDictionary>
     </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -31,10 +42,10 @@
         </Grid.RowDefinitions>
         
         <Button Grid.Column="1" Grid.Row="1"  Style="{StaticResource FlatButtonAllSize}"  Background="{StaticResource SelectEditModePageButtonBrush}" Click="EditProfile_OnClick">
-            <TextBlock Text="{x:Static res1:Resources.EditProfiles}" TextWrapping="Wrap"></TextBlock>
+            <TextBlock Text="{x:Static res1:Resources.EditProfiles}" TextWrapping="Wrap" ></TextBlock>
         </Button>
         <Button Grid.Column="3" Grid.Row="1"  Click="EditProfileMme_OnClick" Style="{StaticResource FlatButtonAllSize}" Background="{StaticResource SelectEditModePageButtonBrush}">
-            <TextBlock Text="{x:Static res1:Resources.EditProfileBindings}" TextWrapping="Wrap"></TextBlock>
+            <TextBlock Text="{x:Static res1:Resources.EditProfileBindings}" TextWrapping="Wrap" ></TextBlock>
         </Button>
         
         <!-- <customControls:PanelButton Grid.Column="1" Grid.Row="1" Caption="qweqwe" Background="Chartreuse"/> -->
