--- a/SCME.WpfControlLibrary/Styles/ListViewProfile.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListViewProfile.xaml
@@ -1,5 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:SCME.WpfControlLibrary.Styles">
-    
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <Style x:Key="ListViewProfiles" TargetType="ListView">
+        <Style.Resources>
+            <!-- Background of selected item when focussed -->
+            <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Red" />
+            <!-- Background of selected item when not focussed -->
+            <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Green" />
+        </Style.Resources>
+    </Style>
 </ResourceDictionary>
